--- a/NumericalCalculatorPwa/NumericalCalculatorPwa.csproj
+++ b/NumericalCalculatorPwa/NumericalCalculatorPwa.csproj
@@ -11,6 +11,13 @@
 	  <None Remove="wwwroot\scripts\**" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Content Remove="wwwroot\site.ts" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.3.3">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Rychusoft.NumericalLibraries.Calculator" Version="1.1.1" />
 		<PackageReference Include="Rychusoft.NumericalLibraries.Interpolation" Version="1.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
@@ -29,5 +36,8 @@
 		<Folder Include="wwwroot\css\bootstrap\" />
 		<Folder Include="wwwroot\css\fonts\" />
 		<Folder Include="wwwroot\css\open-iconic\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <TypeScriptCompile Include="wwwroot\site.ts" />
 	</ItemGroup>
 </Project>
