--- a/NumericalCalculatorPwa/wwwroot/manifest.json
+++ b/NumericalCalculatorPwa/wwwroot/manifest.json
@@ -10,6 +10,12 @@
       "src": "icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "maskable_icon_x512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ]
 }
